<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="56dp">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/sign_in_background"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="Food App"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_sign_in_title"
        android:textColor="@color/dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="27dp"
        android:text="@string/fragment_sign_in_desc"
        android:textColor="@color/soft_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/username_layout"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="29dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:boxStrokeColor="@color/orange"
        app:boxStrokeWidth="0dp"
        app:endIconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/password_layout"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/soft_gray"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:hint="@string/fragment_sign_up_email"
            android:inputType="text"
            android:textColor="@color/dark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="29dp"
        app:boxStrokeWidth="0dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:boxStrokeColor="@color/orange"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/indicator_cheked"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/soft_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:hint="@string/fragment_sign_in_password"
            android:inputType="textPassword"
            android:textColor="@color/dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="19dp"
        android:background="@color/indicator_cheked"
        android:text="Sign In"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/forgot" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/sign_in"
        app:layout_constraintEnd_toEndOf="@id/sign_in"
        app:layout_constraintStart_toStartOf="@id/sign_in"
        app:layout_constraintTop_toTopOf="@id/sign_in"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        android:text="@string/fragment_sign_in_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/indicator_cheked"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_sign_in_no_account"
        android:textColor="@color/soft_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="6dp"
        android:paddingVertical="8dp"
        android:text="@string/fragment_sign_in_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/indicator_cheked"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/sign_up_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_finger"
        app:layout_constraintStart_toEndOf="@id/sign_up_text" />

    <ImageView
        android:id="@+id/img_finger"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_finger_print"
        app:layout_constraintStart_toEndOf="@id/sign_up"
        app:layout_constraintTop_toTopOf="@id/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"


        />


</androidx.constraintlayout.widget.ConstraintLayout>