<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_cart_title"
        android:textColor="@color/color_foodie"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="32dp" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="28dp"
        android:padding="4dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:tint="@color/red" />

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_cart" />


            <TextView
                android:id="@+id/billingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="37dp"
                android:text="Total"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/products" />

            <TextView
                android:id="@+id/itemTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/fragment_cart_item_total"
                android:textColor="@color/soft_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/billingTitle" />

            <TextView
                android:id="@+id/itemTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="$ 10"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/itemTotalText"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/countText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="9dp"
                android:text="Product count"
                android:textColor="@color/soft_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemTotalText" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="4"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/countText"
                app:layout_constraintEnd_toEndOf="parent" />





            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="15dp"
                app:dividerColor="@color/gray_1"
                app:layout_constraintTop_toBottomOf="@id/countText" />

            <TextView
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="21dp"
                android:text="Total"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="$13.00"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/totalText"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
         android:background="@drawable/button_background"
        android:text="@string/fragment_cart_checkout"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/checkout"
        app:layout_constraintEnd_toEndOf="@id/checkout"
        app:layout_constraintStart_toStartOf="@id/checkout"
        app:layout_constraintTop_toTopOf="@id/checkout" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_cart_empty"
        android:textColor="@color/soft_gray"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

